Changed update rig in users controller
